crates/wlang/src/snapshots/wlang__parser__tests__workout_set_weight_and_quantity_any_order-5.snap
---
source: crates/wlang/src/parser.rs
description: "#Bench Press\n30s bw"
---
Workout
  SetGroup
    '#'
    'Bench Press'
    Nl(1)
    Set
      SimpleDuration
        '30'
        's'
      Space(1)
      Weight
        'bw'

