crates/wlang/src/snapshots/wlang__parser__tests__workout_set_weight_and_quantity_any_order-7.snap
---
source: crates/wlang/src/parser.rs
description: "#Bench Press\n1:30 bw"
---
Workout
  SetGroup
    Exercise
      '#'
      'Bench Press'
    Nl(1)
    Set
      LongDuration
        '1'
        ':'
        '30'
      Space(1)
      Weight
        'bw'

