crates/wlang/src/snapshots/wlang__parser__tests__workout_set_weight_and_quantity_any_order-8.snap
---
source: crates/wlang/src/parser.rs
description: "#Pull-ups\nbw + 10 x10"
---
Workout
  SetGroup
    Exercise
      '#'
      'Pull-ups'
    Nl(1)
    Set
      Weight
        'bw'
        Space(1)
        '+'
        Space(1)
        '10'
      Space(1)
      Reps
        'x'
        '10'

