crates/wlang/src/snapshots/wlang__parser__tests__workout_set_weight_and_quantity_any_order-9.snap
---
source: crates/wlang/src/parser.rs
description: "#Pull-ups\n10x bw + 10"
---
Workout
  SetGroup
    Exercise
      '#'
      'Pull-ups'
    Nl(1)
    Set
      Reps
        '10'
        'x'
      Space(1)
      Weight
        'bw'
        Space(1)
        '+'
        Space(1)
        '10'

