crates/wlang/src/snapshots/wlang__parser__tests__workout_set_weight_and_quantity_any_order.snap
---
source: crates/wlang/src/parser.rs
description: "#Bench Press\n225 x5"
---
Workout
  SetGroup
    Exercise
      '#'
      'Bench Press'
    Nl(1)
    Set
      Weight
        '225'
        Space(1)
      Reps
        'x'
        '5'

