crates/wlang/src/snapshots/wlang__parser__tests__workout_simple_duration.snap
---
source: crates/wlang/src/parser.rs
description: "#Planks\nbw 30s"
---
Workout
  SetGroup
    Exercise
      '#'
      'Planks'
    Nl(1)
    Set
      Weight
        'bw'
        Space(1)
      SimpleDuration
        '30'
        's'

