crates/wlang/src/snapshots/wlang__parser__tests__workout_space_before_set.snap
---
source: crates/wlang/src/parser.rs
description: "\n# Bench Press\n        225 x5\n\n    245 x8"
---
Workout
  Nl(1)
  SetGroup
    '#'
    Space(1)
    'Bench Press'
    Nl(1)
    Space(8)
    Set
      Weight
        '225'
        Space(1)
      Reps
        'x'
        '5'
    Nl(2)
    Space(4)
    Set
      Weight
        '245'
        Space(1)
      Reps
        'x'
        '8'

